majorly improve comparisons

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ authors = ["Lukas Winkler <git@lw1.at>"]
 [tool.poetry.dependencies]
 python = "^3.9,<3.11"
 matplotlib = "^3.5.2"
-numpy = "^1.22.3"
+numpy = "^1.21.3"
 h5py = "^3.6.0"
 vtk = {url = "https://github.com/pyvista/pyvista-wheels/raw/main/vtk-9.1.0.dev0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
 pyvista = "^0.34.1"
 pandas = "^1.4.2"
 scipy = "^1.8.0"
 pynbody = "^1.1.0"
+numba = "^0.55.1"
 
 [tool.poetry.dev-dependencies]
 
