--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ scipy = "^1.8.0"
 pynbody = "^1.1.0"
 numba = "^0.55.1"
 tables = "^3.7.0"
+pythran = "^0.11.0"
 
 [tool.poetry.dev-dependencies]
 
